# scop

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.bat
assets/shaders/: shader.frag  shader.vert
includes/: Environment.h  conf.h  scop.h
includes/glad/: glad.h
libs/: glad.c
shaders/: shader.frag  shader.vert
srcs/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Environment.cpp  Environment.hpp  Face.cpp  Face.hpp  Matrix.cpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  Obj.cpp  Obj.hpp  Parser.cpp  Parser.hpp  Shader.cpp  Shader.hpp  Vector.cpp  Vector.hpp  Vector2.hpp  Vector4.cpp  Vector4.hpp  Vertex.cpp  Vertex.hpp  main.cpp  utils.cpp  utils.hpp
srcs/libmath/: Matrix.cpp  Matrix.hpp  Vector2.cpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
srcs/render/: Camera.cpp  Camera.hpp  GlfwHandler.cpp  GlfwHandler.hpp  LoaderBMP.cpp  LoaderBMP.hpp  Obj.cpp  Obj.hpp  Shader.cpp  Shader.hpp
srcs/shaders/: shader.vert
srcs/shaders/spv/: vert.spv
